Item inserting and implementing it on receipt reception
